Update SEO & favicon

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>IHMtest</title>
+  <title>IHMtest Project: Pokémon 1st Generation</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+
+
+  <meta name="description"
+    content="IHMtest Pokémon 1st Generation - User interface based on the first generation of Pokémon">
+  <meta name="keywords" content="IHMtest, Pokémon, first generation, user interface, video games, Pokémon 1st Generation">
+  <meta name="author" content="Carlos Hortúa Calderón">
+  <meta property="og:title" content="IHMtest Pokémon 1st Generation">
+  <meta property="og:description"
+    content="Explore the user interface inspired by the first generation of Pokémon with IHMtest">
+  <meta property="og:image" content="favicon.png">
+  <meta property="og:url" content="https://cahoca.github.io/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="IHMtest Pokémon 1st Generation">
+  <meta name="twitter:description"
+    content="Explore the user interface inspired by the first generation of Pokémon with IHMtest">
+  <meta name="twitter:image" content="favicon.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;900&display=swap" rel="stylesheet">
 </head>
 <body>
